<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_selector"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ingredientsFragment"
        android:icon="@drawable/ingredients_selector"
        android:title="@string/ingredients"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/favorite_selector"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/planMealsFragment"
        android:icon="@drawable/plan_selector"
        android:title="@string/week_plan"
        app:showAsAction="ifRoom" />
</menu>